--- a/Views/tables.ejs
+++ b/Views/tables.ejs
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="index">
                     <span>
                         <svg xmlns:dc="http://purl.org/dc/elements/1.1/" xmlns:cc="http://creativecommons.org/ns#"
                             xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg"
@@ -93,7 +93,7 @@
                             <a href="index"><i class="fas fa-tachometer-alt mr-1"></i>&nbsp;&nbsp;Dashboard</a>
                         </li>
                         <li>
-                            <a href="tables"><i class="fas fa-users mr-1"></i>&nbsp;&nbsp;All Users</a>
+                            <a href="users"><i class="fas fa-users mr-1"></i>&nbsp;&nbsp;All Users</a>
                         </li>
                         <!-- /.nav-second-level -->
                     </ul>
@@ -193,16 +193,9 @@
     <script src="../dist/js/sb-admin-2.js"></script>
 
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
+    <script src="js/site.js"></script>
     <script>
-        $(document).ready(function () {
-            $('#dataTables-example').DataTable({
-                responsive: true
-            });
-        });
-        $("#tablebody").on('click', 'td', function () {
-            let ip = $(event.target).parent('tr').children('.ipAddress').html();
-            window.location.href = "/user?id=" + ip;
-        });
+        
     </script>
 
 </body>
