--- a/Views/tables.ejs
+++ b/Views/tables.ejs
@@ -111,8 +111,8 @@
                                     <i class="fas fa-upload fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div class="huge">6</div>
-                                    <div>MB/s</div>
+                                    <div class="huge totalUploadID">6</div>
+                                    <div>MB</div>
                                 </div>
                             </div>
                         </div>
@@ -126,8 +126,8 @@
                                     <i class="fas fa-download fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div class="huge">12</div>
-                                    <div>MB/s</div>
+                                    <div class="huge totalDownloadID">12</div>
+                                    <div>MB</div>
                                 </div>
                             </div>
                         </div>
@@ -144,21 +144,32 @@
                                     <tr>
                                         <th>Machine Name</th>
                                         <th>Machine IP</th>
-                                        <th>Uploaded</th>
-                                        <th>Downloaded</th>
+                                        <th>Uploaded (MBs)</th>
+                                        <th>Downloaded (MBs) </th>
+                                        <th>Upload Speed (MB/s) </th>
+                                        <th>Download Speed (MB/s) </th>
                                     </tr>
                                 </thead>
                                 <tbody id="tablebody">
-                                    <% listObj.forEach(function(obj) { %>
+                                    <% 
+                                    var count = 0;
+                                    listObj.forEach(function(obj) { 
+                                        %>
                                     <tr class="odd gradeX" style="
                                     cursor: pointer;
                                 ">
+                            
                                         <td><%= obj.ipName %></td>
-                                        <td  class="ipAddress"><%= obj.ipAddress %></td>
-                                        <td><%= obj.totalUpload * 8/(1024.0 * 1024.0) %></td>
-                                        <td class="center"><%= obj.totalDownload * 8/(1024.0 * 1024.0) %></td>
+                                        <td  class="ipAddress" id="<%= obj.ipAddress %>"><%= obj.ipAddress %></td>
+                                        <td id="<%= obj.ipAddress.split('.').join('_') %>_upload" ><%= obj.totalUpload * 8/(1024.0 * 1024.0) %></td>
+                                        <td id="<%= obj.ipAddress.split('.').join('_') %>_download" class="center"><%= obj.totalDownload * 8/(1024.0 * 1024.0) %></td>
+                                        <td id="<%= obj.ipAddress.split('.').join('_') %>_uspeed" style="text-align: center;" data-upload="<%= obj.totalUpload * 8/(1024.0 * 1024.0) %>"></td>
+                                        <td id="<%= obj.ipAddress.split('.').join('_') %>_dspeed"  style="text-align: center;" data-download="<%= obj.totalDownload * 8/(1024.0 * 1024.0) %>"></td>
+                                   
                                     </tr>
-                                    <% }); %>
+                                    <% 
+                                    count++;
+                                }); %>
                                 </tbody>
                             </table>
                             <!-- /.table-responsive -->
