--- a/Views/user.ejs
+++ b/Views/user.ejs
@@ -146,7 +146,7 @@
                                         <th>Machine Name</th>
                                         <th>Machine IP</th>
                                         <th>Type</th>
-                                        <th>Target URL</th>
+                                        <th>Target DNS</th>
                                         <th>Number of Packets</th>
                                         <th>Packet Size</th>
                                         <th>Time Stamp</th>
