--- a/Views/tables.ejs
+++ b/Views/tables.ejs
@@ -139,6 +139,8 @@
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-body">
+                            <input id="date_to" name="date_to" />
+                            
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <thead>
                                     <tr>
